--- a/index.html
+++ b/index.html
@@ -38,7 +38,11 @@
         </div>
         <div class="about-col-2">
           <h1 class="sub-title">About Me</h1>
-          <p>Hello, I am Nidhi Phophaliya of MIT ADT University. I am pursuing my Btech degree in Information Technology specializing in Data Analytics. I am a fast learner and adat to environments easily. I have also worked on various projects and also have been a part of multiple clubs. To know more about me you can click on my portfolio. I can speak languages like Hindi, English and Marathi fluently.</p>
+          <p>Hello, I'm Nidhi Phophaliya, currently pursuing my B.Tech degree in Information Technology with a specialization in Data Analytics at MIT ADT University. My academic journey is complemented by a strong inclination towards fast learning and adaptability to diverse environments.
+
+I take pride in my active participation in various projects, where I've honed my skills and gained practical experience. Additionally, my involvement in multiple clubs has allowed me to contribute to collaborative initiatives and broaden my perspective.
+
+Fluency in languages like Hindi, English, and Marathi facilitates effective communication, adding to my versatile skill set. To delve deeper into my experiences and achievements, feel free to explore my portfolio.</p>
           <div class="tab-titles">
             <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
             <p class="tab-links" onclick="opentab('experience')">Experience</p>
@@ -53,7 +57,7 @@
           </div>
           <div class="tab-contents" id="experience">
             <ul>
-              <li><span>GFG</span><br>Worked as content and tech team member for 2 years</li>
+              <li><span>GFG</span><br>Working as a tech team member in GFG</li>
               <li><span>IIC</span><br>Currently working as content team member</li>
               <li><span>Cloud Computing Club</span><br>Working as a part of the design team</li>
             </ul>
